force-app/main/default/objects/FieloEE__Category__c/FieloEE__Category__c.object-meta.xml
<CustomObject>
    <description>Categories you create for hierarchically ordering rewards and content feeds.</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>