force-app/main/default/objects/FieloEE__Category__c/fields/FieloEE__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category name</description>
    <label>Category</label>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>