force-app/main/default/objects/FieloEE__Category__c/fields/FieloEE__Category_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category_Group_Name__c</fullName>
    <formula>FieloEE__Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Group Name</label>
    <type>Text</type>
</CustomField>