force-app/main/default/objects/FieloEE__Category__c/recordTypes/FieloEE__Category_Group.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Category_Group</fullName>
    <active>true</active>
    <description>Element that represent a set of categories</description>
    <label>Category Group</label>
</RecordType>