force-app/main/default/objects/FieloEE__Category__c/recordTypes/FieloEE__CategoryItem.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__CategoryItem</fullName>
    <active>true</active>
    <label>Category Item</label>
</RecordType>