force-app/main/default/objects/FieloEE__Category__c/listViews/FieloEE__All_Categories.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Categories</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Order__c</columns>
    <columns>FieloEE__Category_Group_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Categories</label>
    <language>en_US</language>
</ListView>